# hcb_Zephyr

./: CMakeLists.txt  README.md  launch.bat  prj.conf  readme  setenv.bat  setenv.fish
CSVisualStudio/: CSReader.sln
CSVisualStudio/CSReaderConsole/: CSReaderConsole.csproj  HCBDevice.cs  Program.cs
boards/arm/hcb/: Kconfig.board  Kconfig.defconfig  hcb.dts  hcb.yaml  hcb_defconfig  pinmux.c
common/: proto.cmake
common/proto/: hcb_protocol.h
linux/: CMakeLists.txt  hcbapi.c  hcbapi.h  hcbcli.cc  hcbmonitor.cpp
linux/cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: adc_subsystem.c  adc_subsystem.h  can_subsystem.c  can_subsystem.h  main.c  usb_hcb_subsystem.c  usb_hcb_subsystem.h
udev/: 88-hcb.rules
